@@ -1,3 +1,7 @@
+Travel::Status::DE::VRR 1.19 - Sat Mar 27 2021
+
+    * Result: Add ->train_no accessor
+
 Travel::Status::DE::VRR 1.18 - Thu Mar 25 2021
 
     * EFA: "place" is now optional
